flux/kutt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: kutt
  name: kutt
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kutt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kutt
    spec:
      containers:
        - name: kutt
          image: kutt/kutt:v2.7.4
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              cpu: "666"
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 512Mi
