flux/kutt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: kutt.${cluster_domain}
    kubernetes.io/ingress.class: alb
  labels:
    app.kubernetes.io/name: kutt
  name: kutt
spec:
  rules:
    - host: kutt.${cluster_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kutt
                port:
                  number: 80
